Last style changes

--- a/web/index.html
+++ b/web/index.html
@@ -52,8 +52,7 @@
 
   <header class="container-fluid-bs">
     <div class="container-bs py-12">
-      <div class="row-bs mt-0 hidden md:block" style="padding-top: 10rem;"></div>
-      <div class="row-bs mt-0 hidden sm:block md:hidden" style="padding-top: 5rem;"></div>
+      <div class="row-bs mt-0 pt-0 sm:pt-20 md:pt-40"></div>
       <div class="row-bs mt-0 mt-12 justify-center">
         <div class="col-md-8 lg:content-center">
           <h1 class="display-2-bs uppercase text-white text-center lg:text-left">Hikehub</h1>
