Simplify styles even more

--- a/web/index.html
+++ b/web/index.html
@@ -50,12 +50,12 @@
     <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
 
-  <header class="container-fluid-bs">
+  <header class="w-full mx-auto px-3">
     <div class="container-bs py-12">
       <div class="row-bs mt-0 pt-0 sm:pt-20 md:pt-40"></div>
       <div class="row-bs mt-0 mt-12 justify-center">
         <div class="col-md-8 lg:content-center">
-          <h1 class="display-2-bs uppercase text-white text-center lg:text-left">Hikehub</h1>
+          <h1 class="leading-[1.2] tracking-[.5rem] text-[3.25rem] md:text-[4.5rem] uppercase text-white text-center lg:text-left">Hikehub</h1>
           <p class="h2-bs text-white text-center lg:text-left">
             Сервис для подготовки еды в&nbsp;поход.<br />
             Собирайте питание умно и&nbsp;легко.
@@ -153,7 +153,7 @@
     </div>
   </article>
 
-  <footer class="container-fluid-bs py-12">
+  <footer class="w-full mx-auto px-3 py-12">
     <div class="container-bs">
       <div class="row-bs mt-0 justify-center p-2">
         <div class="col-md-8 text-white">
@@ -163,7 +163,7 @@
       <div class="row-bs mt-0 pb-12">
         <div class="col-md-2-bs"></div>
         <div class="col-md-8 col-lg-6-bs">
-          <a class="btn-bs btn-primary-bs btn-lg-bs p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
+          <a class="btn-bs btn-primary-bs btn-lg-bs p-2 md:p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
         </div>
       </div>
       <div class="row-bs mt-0">
