--- a/web/index.html
+++ b/web/index.html
@@ -51,7 +51,7 @@
   </noscript>
 
   <header class="w-full mx-auto px-3">
-    <div class="container-bs py-12">
+    <div class="container px-3 py-12">
       <div class="row-bs mt-0 pt-0 sm:pt-20 md:pt-40"></div>
       <div class="row-bs mt-0 mt-12 justify-center">
         <div class="col-md-8 lg:content-center">
@@ -61,11 +61,11 @@
             Собирайте питание умно и&nbsp;легко.
           </p>
           <div class="row-bs mt-0 mt-6">
-            <div class="col-lg-6-bs mb-4">
-              <a class="btn-bs btn-primary-bs btn-lg-bs p-2 md:p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
+            <div class="col-lg-6 mb-4">
+              <a class="btn btn-primary p-2 md:p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
             </div>
-            <div class="col-lg-6-bs">
-              <a class="btn-bs btn-secondary-bs btn-lg-bs p-2 md:p-4 block no-underline font-display" href="/auth/login">Вход</a>
+            <div class="col-lg-6">
+              <a class="btn btn-secondary p-2 md:p-4 block no-underline font-display" href="/auth/login">Вход</a>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
   </header>
 
   <article>
-    <div class="container-bs">
+    <div class="container px-3">
       <div class="row-bs mt-0 pt-12 justify-center">
         <div class="col-md-8">
           <img src="./static/img/2.jpg" class="w-full" />
@@ -103,7 +103,7 @@
       </div>
     </div>
 
-    <div class="container-bs">
+    <div class="container px-3">
       <div class="row-bs mt-0 pt-12 justify-center">
         <div class="col-md-8">
           <video width="100%" height="100%" muted="true" loop="true" autoplay>
@@ -128,7 +128,7 @@
       </div>
     </div>
 
-    <div class="container-bs">
+    <div class="container px-3">
       <div class="row-bs mt-0 pt-12 justify-center">
         <div class="col-md-8">
           <img src="./static/img/3.jpg" class="w-full" />
@@ -154,20 +154,20 @@
   </article>
 
   <footer class="w-full mx-auto px-3 py-12">
-    <div class="container-bs">
+    <div class="container px-3">
       <div class="row-bs mt-0 justify-center p-2">
         <div class="col-md-8 text-white">
           <h2 class="text-center lg:text-left">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
         </div>
       </div>
       <div class="row-bs mt-0 pb-12">
-        <div class="col-md-2-bs"></div>
-        <div class="col-md-8 col-lg-6-bs">
-          <a class="btn-bs btn-primary-bs btn-lg-bs p-2 md:p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
+        <div class="col-md-2"></div>
+        <div class="col-md-8 col-lg-6">
+          <a class="btn btn-primary p-2 md:p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
         </div>
       </div>
       <div class="row-bs mt-0">
-        <div class="col-sm-2-bs"></div>
+        <div class="col-md-2"></div>
         <div class="col-md-8">
           <p class="text-white">
             Дизайн сайта выполнен <a class="text-white" href="https://t.me/RinaYudina">Ириной</a>.
@@ -200,32 +200,32 @@
         </div>
       </div>
       <div class="row-bs mt-0 flex md:hidden">
-        <div class="col-bs">
+        <div class="col">
           <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
             <img src="https://static.addtoany.com/buttons/vk.svg" class="share-button">
           </a>
         </div>
-        <div class="col-bs">
+        <div class="col">
           <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
             <img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button">
           </a>
         </div>
-        <div class="col-bs">
+        <div class="col">
           <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
             <img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button" width="66">
           </a>
         </div>
-        <div class="col-bs">
+        <div class="col">
           <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
             <img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button">
           </a>
         </div>
-        <div class="col-bs">
+        <div class="col">
           <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
             <img src="https://static.addtoany.com/buttons/viber.svg" class="share-button">
           </a>
         </div>
-        <div class="col-bs">
+        <div class="col">
           <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
             <img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button">
           </a>
