--- a/web/index.html
+++ b/web/index.html
@@ -50,22 +50,22 @@
     <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
 
-  <header class="w-full mx-auto px-3">
+  <header class="w-full mx-auto px-3 bg-cover bg-no-repeat h-dvh bg-[75%_100%] lg:bg-right-bottom bg-[url('../../static/img/1.jpg')]">
     <div class="container px-3 py-12">
-      <div class="row-bs mt-0 pt-0 sm:pt-20 md:pt-40"></div>
-      <div class="row-bs mt-0 mt-12 justify-center">
+      <div class="row mt-0 pt-0 sm:pt-20 md:pt-40"></div>
+      <div class="row mt-12 justify-center">
         <div class="col-md-8 lg:content-center">
           <h1 class="leading-[1.2] tracking-[.5rem] text-[3.25rem] md:text-[4.5rem] uppercase text-white text-center lg:text-left">Hikehub</h1>
-          <p class="h2-bs text-white text-center lg:text-left">
+          <p class="font-display font-semibold text-[1.5rem] sm:text-[1.75rem] xl:text-[2rem] mt-0 mb-2 leading-[1.2] text-white text-center lg:text-left">
             Сервис для подготовки еды в&nbsp;поход.<br />
             Собирайте питание умно и&nbsp;легко.
           </p>
-          <div class="row-bs mt-0 mt-6">
+          <div class="row mt-6">
             <div class="col-lg-6 mb-4">
-              <a class="btn btn-primary p-2 md:p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
+              <a class="btn btn-primary block no-underline font-display" href="/auth/signup">Регистрация</a>
             </div>
             <div class="col-lg-6">
-              <a class="btn btn-secondary p-2 md:p-4 block no-underline font-display" href="/auth/login">Вход</a>
+              <a class="btn btn-secondary block no-underline font-display" href="/auth/login">Вход</a>
             </div>
           </div>
         </div>
@@ -75,17 +75,17 @@
 
   <article>
     <div class="container px-3">
-      <div class="row-bs mt-0 pt-12 justify-center">
+      <div class="row mt-0 pt-12 justify-center">
         <div class="col-md-8">
           <img src="./static/img/2.jpg" class="w-full" />
         </div>
       </div>
-      <div class="row-bs mt-0 pt-4 justify-center">
+      <div class="row mt-0 pt-4 justify-center">
         <div class="col-md-8">
           <h2>Сэкономьте свое время</h2>
         </div>
       </div>
-      <div class="row-bs mt-0 pb-12 justify-center">
+      <div class="row mt-0 pb-12 justify-center">
         <div class="col-md-8">
           <p>
             Так выглядит день похода в&nbsp;<strong>HIKEHUB</strong>.
@@ -104,7 +104,7 @@
     </div>
 
     <div class="container px-3">
-      <div class="row-bs mt-0 pt-12 justify-center">
+      <div class="row mt-0 pt-12 justify-center">
         <div class="col-md-8">
           <video width="100%" height="100%" muted="true" loop="true" autoplay>
             <source src="./static/vid/1.mp4" type="video/mp4">
@@ -112,12 +112,12 @@
           </video>
         </div>
       </div>
-      <div class="row-bs mt-0 pt-4 justify-center">
+      <div class="row mt-0 pt-4 justify-center">
         <div class="col-md-8">
           <h2>Не&nbsp;тратьте время на&nbsp;поиск продуктов</h2>
         </div>
       </div>
-      <div class="row-bs mt-0 pb-12 justify-center">
+      <div class="row mt-0 pb-12 justify-center">
         <div class="col-md-8">
           <p>
             В&nbsp;сервисе уже есть база продуктов, сформированная туристами.
@@ -129,17 +129,17 @@
     </div>
 
     <div class="container px-3">
-      <div class="row-bs mt-0 pt-12 justify-center">
+      <div class="row mt-0 pt-12 justify-center">
         <div class="col-md-8">
           <img src="./static/img/3.jpg" class="w-full" />
         </div>
       </div>
-      <div class="row-bs mt-0 pt-4 justify-center">
+      <div class="row mt-0 pt-4 justify-center">
         <div class="col-md-8">
           <h2>Упростите покупки</h2>
         </div>
       </div>
-      <div class="row-bs mt-0 pb-12 justify-center">
+      <div class="row mt-0 pb-12 justify-center">
         <div class="col-md-8">
           <p>
             Сайт автоматически считает количество продуктов, которые вы&nbsp;добавляете в&nbsp;меню и&nbsp;создает список
@@ -155,18 +155,18 @@
 
   <footer class="w-full mx-auto px-3 py-12">
     <div class="container px-3">
-      <div class="row-bs mt-0 justify-center p-2">
+      <div class="row mt-0 justify-center p-2">
         <div class="col-md-8 text-white">
           <h2 class="text-center lg:text-left">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
         </div>
       </div>
-      <div class="row-bs mt-0 pb-12">
+      <div class="row mt-0 pb-12">
         <div class="col-md-2"></div>
         <div class="col-md-8 col-lg-6">
-          <a class="btn btn-primary p-2 md:p-4 block no-underline font-display" href="/auth/signup">Регистрация</a>
+          <a class="btn btn-primary block no-underline font-display" href="/auth/signup">Регистрация</a>
         </div>
       </div>
-      <div class="row-bs mt-0">
+      <div class="row mt-0">
         <div class="col-md-2"></div>
         <div class="col-md-8">
           <p class="text-white">
@@ -199,7 +199,7 @@
           </div>
         </div>
       </div>
-      <div class="row-bs mt-0 flex md:hidden">
+      <div class="row mt-0 flex md:hidden">
         <div class="col">
           <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
             <img src="https://static.addtoany.com/buttons/vk.svg" class="share-button">
