Remove excessive list

--- a/web/index.html
+++ b/web/index.html
@@ -62,10 +62,10 @@
           </p>
           <div class="row mt-6">
             <div class="col-lg-6 mb-4">
-              <a class="btn btn-primary block no-underline font-display" href="/auth/signup">Регистрация</a>
+              <a class="btn btn-primary block" href="/auth/signup">Регистрация</a>
             </div>
             <div class="col-lg-6">
-              <a class="btn btn-secondary block no-underline font-display" href="/auth/login">Вход</a>
+              <a class="btn btn-secondary block" href="/auth/login">Вход</a>
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@
       <div class="row pb-12">
         <div class="col-md-2"></div>
         <div class="col-md-8 col-lg-6">
-          <a class="btn btn-primary block no-underline font-display" href="/auth/signup">Регистрация</a>
+          <a class="btn btn-primary block" href="/auth/signup">Регистрация</a>
         </div>
       </div>
       <div class="row">
@@ -177,58 +177,26 @@
             дополнительной информацией и&nbsp;документами.
           </p>
           <p class="text-white">Поделитесь ссылкой на&nbsp;сайт в&nbsp;соцсетях. Это поможет развитию проекта.</p>
-          <div class="hidden md:block">
+          <div class="grid grid-cols-6 text-center md:text-left md:block">
             <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/vk.svg" width="40" height="40" class="share-button">
+              <img src="https://static.addtoany.com/buttons/vk.svg" class="share-button w-16 md:w-10">
             </a>
             <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/telegram.svg" width="40" height="40" class="share-button">
+              <img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button w-16 md:w-10">
             </a>
             <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/facebook.svg" width="40" height="40" class="share-button">
+              <img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button w-16 md:w-10">
             </a>
             <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/twitter.svg" width="40" height="40" class="share-button">
+              <img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button w-16 md:w-10">
             </a>
             <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/viber.svg" width="40" height="40" class="share-button">
+              <img src="https://static.addtoany.com/buttons/viber.svg" class="share-button w-16 md:w-10">
             </a>
             <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/whatsapp.svg" width="40" height="40" class="share-button">
+              <img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button w-16 md:w-10">
             </a>
           </div>
-        </div>
-      </div>
-      <div class="row flex md:hidden">
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/vk.svg" class="share-button">
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button">
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button" width="66">
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button">
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/viber.svg" class="share-button">
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-            <img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button">
-          </a>
         </div>
       </div>
     </div>
