Add lazy loading for images in the page

--- a/web/index.html
+++ b/web/index.html
@@ -77,7 +77,7 @@
     <div class="container px-3">
       <div class="row pt-12 justify-center">
         <div class="col-md-8">
-          <img src="./static/img/2.jpg" class="w-full" />
+          <img src="./static/img/2.jpg" class="w-full" loading="lazy"/>
         </div>
       </div>
       <div class="row pt-4 justify-center">
@@ -131,7 +131,7 @@
     <div class="container px-3">
       <div class="row pt-12 justify-center">
         <div class="col-md-8">
-          <img src="./static/img/3.jpg" class="w-full" />
+          <img src="./static/img/3.jpg" class="w-full" loading="lazy"/>
         </div>
       </div>
       <div class="row pt-4 justify-center">
