--- a/web/tutorial.html
+++ b/web/tutorial.html
@@ -51,9 +51,7 @@
 
   <div class="container px-6 lg:px-0">
     <div class="my-3">
-      <small>
-        <a href="/">Вернуться на главную</a>
-      </small>
+      <a class="text-sm" href="/">Вернуться на главную</a>
     </div>
     <div class="my-3 grid grid-cols-6">
       <div class="hidden lg:block lg:col-span-1"></div>
@@ -217,9 +215,7 @@
       <div class="hidden lg:block lg:col-span-1"></div>
     </div>
     <div class="my-3">
-      <small>
-        <a href="/">Вернуться на главную</a>
-      </small>
+      <a class="text-sm" href="/">Вернуться на главную</a>
     </div>
   </div>
 
