Tailwind for static pages (#6)
* Add tailwind package for tutorial.html

* Move typefaces definition out of landing scss

* Rewrite tutorial page with Tailwind

* Fix formatting

* Partially update index.html

* Revert Bootstrap styling back with -bs suffix

* Add rows + justify-content-center

* More BS utilities

* Format bottom panel

* Add more styles + remove some -bs

* Remove more -bs styles

* Finish footer

* Replace margin utilities

* Replace padding utilities

* Replace display utilities

* Reduce styles

* Remove specific layout utilities

* Replace text utilities

* Last style changes

* Simplify styles even more

* Remove unneeded styles

* Simplify buttons even more

* Refactor last styles completely

* Remove unneeded styles

* Remove excessive list

* Add lazy loading for images in the page

* Add last page to tailwind

* Add one more page

* Remove unneeded tags

--- a/web/info.html
+++ b/web/info.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Сервис для подготовки еды в поход. Собирайте питание умно и легко.">
 
-  <link rel="stylesheet" href="./src/css/styles.css">
+  <link rel="stylesheet" href="./src/css/empty.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -44,46 +44,44 @@
   <!-- /Yandex.Metrika counter -->
 </head>
 
-<body>
+<body class="font-body">
   <noscript>
     <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
 
   <div class="container">
-    <div class="row my-3">
-      <div class="col">
-        <small><a href="/">Вернуться на главную</a></small>
-      </div>
+    <div class="flex my-4 max-w-screen-md">
+      <a href="/" class="underline text-sm text-blue-500">
+        Вернуться на главную
+      </a>
     </div>
-    <div class="row my-3">
-      <div class="col">
-        <h1 class="display-4">Информация</h1>
-      </div>
+    <div class="flex my-4 max-w-screen-md">
+      <h1 class="font-display text-3xl">Информация</h1>
     </div>
-    <div class="row my-3">
-      <div class="col-lg-8">
-        <h2>Отказ от ответственности</h2>
-        <p>
-          Данный проект не&nbsp;содержит никакой обязательной лицензии.
+    <div class="flex my-4 max-w-screen-md">
+      <div>
+        <h2 class="font-display text-2xl mb-2">Отказ от ответственности</h2>
+        <p class="pb-8">
           Вся функциональность предоставляется &laquo;как есть&raquo;.<br />
           Вы&nbsp;используете проект на&nbsp;свой страх и&nbsp;риск.
           Мы&nbsp;не&nbsp;несем никакой ответственности в&nbsp;случае возникновения проблем, вызванных неправильным
           использованием продукта.
         </p>
 
-        <h2>Информация о лицензиях</h2>
+        <h2 class="font-display text-2xl mb-2">Информация о лицензиях</h2>
         <p>
           Вся графика на&nbsp;этом сайте взята с&nbsp;сайта freepik.com.<br />
           Как того требует лицензия для использования графических материалов, мы&nbsp;предоставляем копирайты
           дизайнеров, выполнивших работы ниже.
         </p>
         <p>
-          <a href="https://www.freepik.com">Designed by macrovector / Freepik</a>
+          <a class="underline text-blue-500" href="https://www.freepik.com">
+            Designed by macrovector / Freepik
+          </a>
         </p>
       </div>
     </div>
   </div>
-
 </body>
 
 </html>
