--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="https://hikehub.ru/">
   <meta name="description" content="Сервис для подготовки еды в поход. Собирайте питание умно и легко.">
 
-  <link rel="stylesheet" href="./src/css/landing.scss">
+  <link rel="stylesheet" href="./src/css/landing.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -45,128 +45,129 @@
   <!-- /Yandex.Metrika counter -->
 </head>
 
-<body>
+<body class="font-body">
   <noscript>
     <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
 
-  <div class="container-fluid" id="header">
-    <div class="container py-5">
-      <div class="row d-none d-md-block" style="padding-top: 10rem;"></div>
-      <div class="row d-none d-sm-block d-md-none" style="padding-top: 5rem;"></div>
-      <div class="row mt-5 justify-content-center">
-        <div class="col-md-8 justify-content-lg-center">
-          <h1 class="display-2 text-uppercase text-white text-center text-lg-start">Hikehub</h1>
-          <p class="h2 text-white text-center text-lg-start">
+  <header class="w-full mx-auto px-3 bg-cover bg-no-repeat h-dvh bg-[75%_100%] lg:bg-right-bottom bg-[url('../../static/img/1.jpg')]">
+    <div class="container px-3 py-12">
+      <div class="row pt-0 sm:pt-20 md:pt-40"></div>
+      <div class="row mt-12 justify-center">
+        <div class="col-md-8 lg:content-center">
+          <h1 class="leading-[1.2] tracking-[.5rem] text-[3.25rem] md:text-[4.5rem] uppercase text-white text-center lg:text-left">Hikehub</h1>
+          <p class="font-display font-semibold text-[1.5rem] sm:text-[1.75rem] xl:text-[2rem] mt-0 mb-2 leading-[1.2] text-white text-center lg:text-left">
             Сервис для подготовки еды в&nbsp;поход.<br />
             Собирайте питание умно и&nbsp;легко.
           </p>
-          <div class="row mt-4">
-            <div class="col-lg-6 mb-3">
-              <a class="btn btn-primary btn-lg p-2 p-md-3 d-block" href="/auth/signup">Регистрация</a>
+          <div class="row mt-6">
+            <div class="col-lg-6 mb-4">
+              <a class="btn btn-primary block" href="/auth/signup">Регистрация</a>
             </div>
             <div class="col-lg-6">
-              <a class="btn btn-secondary btn-lg p-2 p-md-3 d-block" href="/auth/login">Вход</a>
+              <a class="btn btn-secondary block" href="/auth/login">Вход</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </header>
 
-  <div class="container">
-    <div class="row pt-5 justify-content-center">
-      <div class="col-md-8">
-        <img src="./static/img/2.jpg" class="w-100" />
-      </div>
-    </div>
-    <div class="row pt-3 justify-content-center">
-      <div class="col-md-8">
-        <h2>Сэкономьте свое время</h2>
-      </div>
-    </div>
-    <div class="row pb-5 justify-content-center">
-      <div class="col-md-8">
-        <p>
-          Так выглядит день похода в&nbsp;<strong>HIKEHUB</strong>.
-          Вместо многостраничных таблиц&nbsp;&mdash; простой сайт, где с&nbsp;первого взгляда понятно, что
-          вы&nbsp;будете есть.
-          Сервис сам посчитает калорийность, пищевую ценность и&nbsp;вес продуктов.
-          Автоматически составит список покупок и&nbsp;отчет для фасовки.
-          Вам остается придумать меню и&nbsp;добавить продукты.
-        </p>
-        <!-- <p>
-          А&nbsp;<a href="https://hikehub.ru/meals/wmALVrLq528">вот так</a> выглядит пример
-          настоящего похода в&nbsp;приложении:
-        </p> -->
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row pt-5 justify-content-center">
-      <div class="col-md-8">
-        <video width="100%" height="100%" muted="true" loop="true" autoplay>
-          <source src="./static/vid/1.mp4" type="video/mp4">
-          Ваш браузер не поддерживает воспроизведение видео.
-        </video>
-      </div>
-    </div>
-    <div class="row pt-3 justify-content-center">
-      <div class="col-md-8">
-        <h2>Не&nbsp;тратьте время на&nbsp;поиск продуктов</h2>
-      </div>
-    </div>
-    <div class="row pb-5 justify-content-center">
-      <div class="col-md-8">
-        <p>
-          В&nbsp;сервисе уже есть база продуктов, сформированная туристами.
-          Выбирайте продукты из&nbsp;имеющихся или легко добавляйте свои.
-          Когда вы&nbsp;добавляете продукты в&nbsp;базу, они становятся доступными для всех пользователей.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row pt-5 justify-content-center">
-      <div class="col-md-8">
-        <img src="./static/img/3.jpg" class="w-100" />
-      </div>
-    </div>
-    <div class="row pt-3 justify-content-center">
-      <div class="col-md-8">
-        <h2>Упростите покупки</h2>
-      </div>
-    </div>
-    <div class="row pb-5 justify-content-center">
-      <div class="col-md-8">
-        <p>
-          Сайт автоматически считает количество продуктов, которые вы&nbsp;добавляете в&nbsp;меню и&nbsp;создает список
-          покупок.
-          Откройте список на&nbsp;смартфоне или распечатайте, чтобы взять с&nbsp;собой в&nbsp;магазин.
-          Ведите заметки, чтобы распределить покупки и&nbsp;не&nbsp;забыть, если каких-то продуктов не&nbsp;оказалось
-          в&nbsp;магазине.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="container-fluid py-5" id="footer">
-    <div class="container">
-      <div class="row justify-content-center pb-2">
-        <div class="col-md-8 text-white">
-          <h2 class="text-center text-lg-start">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
+  <article>
+    <div class="container px-3">
+      <div class="row pt-12 justify-center">
+        <div class="col-md-8">
+          <img src="./static/img/2.jpg" class="w-full" loading="lazy"/>
         </div>
       </div>
-      <div class="row pb-5">
+      <div class="row pt-4 justify-center">
+        <div class="col-md-8">
+          <h2>Сэкономьте свое время</h2>
+        </div>
+      </div>
+      <div class="row pb-12 justify-center">
+        <div class="col-md-8">
+          <p>
+            Так выглядит день похода в&nbsp;<strong>HIKEHUB</strong>.
+            Вместо многостраничных таблиц&nbsp;&mdash; простой сайт, где с&nbsp;первого взгляда понятно, что
+            вы&nbsp;будете есть.
+            Сервис сам посчитает калорийность, пищевую ценность и&nbsp;вес продуктов.
+            Автоматически составит список покупок и&nbsp;отчет для фасовки.
+            Вам остается придумать меню и&nbsp;добавить продукты.
+          </p>
+          <!-- <p>
+            А&nbsp;<a href="https://hikehub.ru/meals/wmALVrLq528">вот так</a> выглядит пример
+            настоящего похода в&nbsp;приложении:
+          </p> -->
+        </div>
+      </div>
+    </div>
+
+    <div class="container px-3">
+      <div class="row pt-12 justify-center">
+        <div class="col-md-8">
+          <video width="100%" height="100%" muted="true" loop="true" autoplay>
+            <source src="./static/vid/1.mp4" type="video/mp4">
+            Ваш браузер не поддерживает воспроизведение видео.
+          </video>
+        </div>
+      </div>
+      <div class="row pt-4 justify-center">
+        <div class="col-md-8">
+          <h2>Не&nbsp;тратьте время на&nbsp;поиск продуктов</h2>
+        </div>
+      </div>
+      <div class="row pb-12 justify-center">
+        <div class="col-md-8">
+          <p>
+            В&nbsp;сервисе уже есть база продуктов, сформированная туристами.
+            Выбирайте продукты из&nbsp;имеющихся или легко добавляйте свои.
+            Когда вы&nbsp;добавляете продукты в&nbsp;базу, они становятся доступными для всех пользователей.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container px-3">
+      <div class="row pt-12 justify-center">
+        <div class="col-md-8">
+          <img src="./static/img/3.jpg" class="w-full" loading="lazy"/>
+        </div>
+      </div>
+      <div class="row pt-4 justify-center">
+        <div class="col-md-8">
+          <h2>Упростите покупки</h2>
+        </div>
+      </div>
+      <div class="row pb-12 justify-center">
+        <div class="col-md-8">
+          <p>
+            Сайт автоматически считает количество продуктов, которые вы&nbsp;добавляете в&nbsp;меню и&nbsp;создает список
+            покупок.
+            Откройте список на&nbsp;смартфоне или распечатайте, чтобы взять с&nbsp;собой в&nbsp;магазин.
+            Ведите заметки, чтобы распределить покупки и&nbsp;не&nbsp;забыть, если каких-то продуктов не&nbsp;оказалось
+            в&nbsp;магазине.
+          </p>
+        </div>
+      </div>
+    </div>
+  </article>
+
+  <footer class="w-full mx-auto px-3 py-12">
+    <div class="container px-3">
+      <div class="row justify-center p-2">
+        <div class="col-md-8 text-white">
+          <h2 class="text-center lg:text-left text-3xl">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
+        </div>
+      </div>
+      <div class="row pb-12">
         <div class="col-md-2"></div>
         <div class="col-md-8 col-lg-6">
-          <a class="btn btn-primary btn-lg p-3 d-block" href="/auth/signup">Регистрация</a>
+          <a class="btn btn-primary block" href="/auth/signup">Регистрация</a>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-2"></div>
+        <div class="col-md-2"></div>
         <div class="col-md-8">
           <p class="text-white">
             Дизайн сайта выполнен <a class="text-white" href="https://t.me/RinaYudina">Ириной</a>.
@@ -176,48 +177,30 @@
             дополнительной информацией и&nbsp;документами.
           </p>
           <p class="text-white">Поделитесь ссылкой на&nbsp;сайт в&nbsp;соцсетях. Это поможет развитию проекта.</p>
-          <div class="d-none d-md-block">
-            <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/vk.svg" width="40" height="40"
-                class="share-button"></a>
-            <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/telegram.svg" width="40" height="40"
-                class="share-button"></a>
-            <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/facebook.svg" width="40" height="40"
-                class="share-button"></a>
-            <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/twitter.svg" width="40" height="40"
-                class="share-button"></a>
-            <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/viber.svg" width="40" height="40"
-                class="share-button"></a>
-            <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-              target="_blank"><img src="https://static.addtoany.com/buttons/whatsapp.svg" width="40" height="40"
-                class="share-button"></a>
+          <div class="grid grid-cols-6 text-center md:text-left md:block">
+            <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/vk.svg" class="share-button w-16 md:w-10">
+            </a>
+            <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button w-16 md:w-10">
+            </a>
+            <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button w-16 md:w-10">
+            </a>
+            <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button w-16 md:w-10">
+            </a>
+            <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/viber.svg" class="share-button w-16 md:w-10">
+            </a>
+            <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
+              <img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button w-16 md:w-10">
+            </a>
           </div>
         </div>
       </div>
-      <div class="row d-flex d-md-none">
-        <div class="col"><a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/vk.svg" class="share-button"></a></div>
-        <div class="col"><a
-            href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button"></a></div>
-        <div class="col"><a
-            href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button"></a></div>
-        <div class="col"><a
-            href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button"></a></div>
-        <div class="col"><a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/viber.svg" class="share-button"></a></div>
-        <div class="col"><a
-            href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname="
-            target="_blank"><img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button"></a></div>
-      </div>
     </div>
-  </div>
+  </footer>
 </body>
 
 </html>
