Add deferred loading of 3rdparty icons

--- a/web/index.html
+++ b/web/index.html
@@ -191,22 +191,22 @@
           <p class="text-white">Поделитесь ссылкой на&nbsp;сайт в&nbsp;соцсетях. Это поможет развитию проекта.</p>
           <div class="grid grid-cols-6 text-center md:text-left md:block">
             <a href="https://www.addtoany.com/add_to/vk?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/vk.svg" class="share-button w-16 md:w-10" alt="Иконка Vk">
+              <img src="https://static.addtoany.com/buttons/vk.svg" class="share-button w-16 md:w-10" alt="Иконка Vk" loading="lazy">
             </a>
             <a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button w-16 md:w-10" alt="Иконка Telegram">
+              <img src="https://static.addtoany.com/buttons/telegram.svg" class="share-button w-16 md:w-10" alt="Иконка Telegram" loading="lazy">
             </a>
             <a href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button w-16 md:w-10" alt="Иконка Facebook">
+              <img src="https://static.addtoany.com/buttons/facebook.svg" class="share-button w-16 md:w-10" alt="Иконка Facebook" loading="lazy">
             </a>
             <a href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button w-16 md:w-10" alt="Иконка Twitter">
+              <img src="https://static.addtoany.com/buttons/twitter.svg" class="share-button w-16 md:w-10" alt="Иконка Twitter" loading="lazy">
             </a>
             <a href="https://www.addtoany.com/add_to/viber?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/viber.svg" class="share-button w-16 md:w-10" alt="Иконка Viber">
+              <img src="https://static.addtoany.com/buttons/viber.svg" class="share-button w-16 md:w-10" alt="Иконка Viber" loading="lazy">
             </a>
             <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fhikehub.ru&amp;linkname=" target="_blank">
-              <img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button w-16 md:w-10" alt="Иконка WhatsApp">
+              <img src="https://static.addtoany.com/buttons/whatsapp.svg" class="share-button w-16 md:w-10" alt="Иконка WhatsApp" loading="lazy">
             </a>
           </div>
         </div>
