Add maintenance page with couple of optimization options

--- a/web/admin.html
+++ b/web/admin.html
@@ -43,7 +43,7 @@
 
   <div id="app"></div>
 
-  <script src="./src/users.ts" type="module" defer></script>
+  <script src="./src/admin.ts" type="module" defer></script>
 </body>
 
 </html>
