Add Umami tracking scripts

--- a/web/incorrect.html
+++ b/web/incorrect.html
@@ -34,6 +34,9 @@
     });
   </script>
   <!-- /Yandex.Metrika counter -->
+  <!-- Umami counter -->
+  <script defer src="https://stats.codecliffs.ru/script.js" data-website-id="d6a1ce1d-d123-4350-8e90-197585ce2b21"></script>
+  <!-- Umami counter -->
 </head>
 
 <body class="font-body">
